harmonize gap rules, fix CSS for Grid block

--- a/src/scss/03-base/_variables-css.scss
+++ b/src/scss/03-base/_variables-css.scss
@@ -36,6 +36,7 @@
     /*
      * Spacing
      */
+    --spacing--block-default: 16px;
     --spacing--block-1: 16px;
     --spacing--block-2: 32px;
     --spacing--block-3: 48px;
