--- a/src/scss/06-blocks/core/_columns.scss
+++ b/src/scss/06-blocks/core/_columns.scss
@@ -1,6 +1,5 @@
 .wp-block-columns {
     @include block-vertical-spacing();
-    gap: get-gutter-width() !important;
 
     .wp-block-column {
         &.has-background {
